--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://najibprog.github.io/najiberrami/'
 languageCode = 'en-us'
 title = 'Najib ERRAMI'
 theme = ["hello-friend-ng"]
